fix: footer was overlapping images

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body{
 }
 .contentwrap{
     margin-top: 3rem ;
-    padding-bottom: 3rem;
+    padding-bottom: 6rem;
 }
 .navbar{
     font-size: 3rem;
